# python

./: .gitignore  .pydocstyle  tools.config.rb
blockchain/: Dockerfile  Pipfile  docker-compose.yml  pyproject.toml  requirements.txt
blockchain/blockchain/: blockchain.py
blockchain/crypto_currency/: coqui_coin.py
blockchain/module1/: blockchain.py
jw/: .flake8  .pydocstyle  __main__.py  pyproject.toml  pytest.ini
jw/data/: quebradillas-1.html  quebradillas-2.html  quebradillas_1.csv
jw/data/csv/: People By Name.csv  arecibo-a-ansi.csv  arecibo-a-import.csv  arecibo-a.csv  qryExport.csv  quebradillas_1.csv  quebradillas_1_test.csv  quebradillas_2.csv
jw/data/csv/export/: arecibo-a.csv  arecibo-h.csv  arecibo-i.csv  arecibo-k.csv  arecibo-l.csv  arecibo-n.csv  arecibo-s.csv
jw/data/csv/export/arecibo/: arecibo-a.csv  arecibo-b.csv  arecibo-c.csv  arecibo-d.csv  arecibo-e.csv  arecibo-f.csv  arecibo-g.csv  arecibo-j.csv  arecibo-k.csv  arecibo-m.csv  arecibo-o.csv  arecibo-p.csv  arecibo-q.csv  arecibo-r.csv  arecibo-t.csv  arecibo-v.csv  arecibo-w.csv  arecibo-z.csv
jw/data/csv/export/camuy/: camuy-a.csv  camuy-b.csv  (+23 more)
jw/data/csv/import/: Arecibo-a-export_10_1_2021.txt  Arecibo-b_10-12-2021.csv  phone-english.csv
jw/data/db/: JW_Phone_Territories.accdb
jw/data/imports/: Arecibo-a-export_10_1_2021.csv  Arecibo-a-export_10_1_2021.csv.txt
jw/data/txt/: arecibo-a.txt
jw/data/txt/import/: arecibo-b.txt  arecibo-f.txt  arecibo-k.txt  quebradillas-c.txt
jw/jw/: __init__.py  csv.py  pdf.py  txt.py
jw/src/: __init__.py  create_territory_pdf.py
jw/src/jw/: __init__.py  csv.py  dom.py  pdf.py  txt.py
jw/tests/: test_csv.py  test_jw.py  test_pdf.py  test_txt.py
math/: add_subtract_multiplication_division.ipynb  pyproject.toml  run.sh
math/src/: __init__.py
(+320 files in other folders)
