[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "0.12.2"
requests = "^2.18.4"

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
