[tool.poetry]
name = "jw"
version = "0.1.0"
description = ""
authors = ["Diego Vila <dego_vila@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
fpdf2 = "^2.4.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.27.0"
ipdb = "^0.13.9"

[tool.poetry.scripts]
start = "src:start"

[tool.pytest.ini_options]
markers = [
    "csv",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
