[tool.poetry]
name = "math"
version = "0.1.0"
description = ""
authors = ["diego <dego_vila@yahoo.com>"]

[tool.poetry.scripts]
start = "src:start"

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
